		 CHANGES IN servr VERSION 0.21



		 CHANGES IN servr VERSION 0.20

MINOR CHANGES

- `server_config()` will add a leading `/` to `baseurl` if it has not already been included.

		 CHANGES IN servr VERSION 0.19

MINOR CHANGES

- `server_config()` also returns the `daemon` value in the list.

		 CHANGES IN servr VERSION 0.18

BUG FIXES

- Fixed the malformed Accept-Ranges header (thanks, @JasonPunyon, #47).

MINOR CHANGES

- `servr::random_port()` looks for an available port quietly via `httpuv::startServer(quiet = TRUE)`. This requires **httpuv** >= v1.5.2.

		 CHANGES IN servr VERSION 0.17

NEW FEATURES

- Added an argument `open` to `servr::browse_last()` so users can decide whether to reopen the lastly browsed page.

		 CHANGES IN servr VERSION 0.16

BUG FIXES

- Refinements to HTTP range request responses. Open-ended range requests (including "Range: bytes=0-") should now be correctly handled (thanks, @raymondben, #41).

		 CHANGES IN servr VERSION 0.15

BUG FIXES

- When the environment variable `R_SERVR_PORT` is set, `server_config()` may issue a superfluous warning "createTcpServer: address already in use" due to an unnecessary call to `random_port()` (thanks, @itcarroll, #39).

		 CHANGES IN servr VERSION 0.14

NEW FEATURES

- The argument `host` in `server_config()` can be configured through the global option `servr.host` now, e.g., `options(servr.host = '0.0.0.0')`.

		 CHANGES IN servr VERSION 0.13

NEW FEATURES

- Added a `verbose` argument to `server_config()`.

- The `interval` argument of `server_config()` can be set via the global option `servr.interval` now. For example, `options(servr.interval = 0.5)`.

MAJOR CHANGES

- Server functions such as `httd()` now return the config object created by `server_config()` instead of the server handle returned by `httpuv::startServer()`. The config object contains various information about the server and methods to start/stop the server.

		 CHANGES IN servr VERSION 0.12

NEW FEATURES
